# lab4

./: .env  README.md  pyproject.toml
prog/: ind1.json  ind1.py  ind2.json  ind2.py  primer.json  primer.py  pyproject.toml
