[tool.poetry]
name = "lab4"
version = "0.0.4"
description = "Stepanoff Leonid"
authors = ["FiaLDI <leon.youtube2017@yandex.ru>"]
license = "MIT LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.18"
python-dotenv = "^1.0.1"
pre-commit = "^3.7.0"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
isort = "^5.13.2"
flake8 = "^7.0.0"

[tool.black]
exclude =.git,__pycache__,docs/source/conf.py,build,dist,tests

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
